# opentelemetry-instrumentation-celery-example

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
