[tool.poetry]
name = "opentelemetry-instrumentation-celery-example"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti <daniele@withplum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = ">=5.0.5,<5.1.0"
fastapi = ">=0.68.0,<0.69.0"
redis = ">=3.5.3,<3.6.0"
uvicorn = "~0.15.0"
opentelemetry-api = "^1.17.0"
opentelemetry-sdk = "^1.17.0"
opentelemetry-instrumentation = "^0.38b0"
opentelemetry-exporter-otlp = "^1.17.0"
opentelemetry-distro = {extras = ["oltp"], version = "^0.38b0"}
opentelemetry-instrumentation-celery = "^0.38b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
